--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">Music Mojave</string>
     <string name="music_name">Music Name</string>
     <string name="duration">Duration</string>
-    <string name="now_playing">Now Playing:</string>
-    <string name="title_activity_now_playing">Song Details</string>
+    <string name="title_activity_now_playing">Now Playing</string>
+    <string name="see_what_s_playing">See what\'s Playing</string>
 </resources>
